feat: add PAGE_NUM recognition, compress prompts, and unify UI column order
Recognize Excel print page numbers in AI output, show and export PAGE_NUM before worker NO on PC and miniprogram, compress canonical prompts (seed v4), and merge runtime API constraints.

Co-authored-by: Cursor <cursoragent@cursor.com>